fix icon alignment

--- a/src/components/mf-icon/mf-icon.css
+++ b/src/components/mf-icon/mf-icon.css
@@ -3,10 +3,6 @@
   --icon-width: 1em;
   --icon-height: 1em;
 
-  /*
-  display: flex;
-  justify-content: center;
-  align-items: center; */
   vertical-align: middle;
 }
 
